--- a/semantic_segmentation_pytorch(生成标签图).ipynb
+++ b/semantic_segmentation_pytorch(生成标签图).ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1vpZk67r4OpNAZ1tjm_V3_HaWzhthEB-z",
-      "authorship_tag": "ABX9TyN/UaiC9iifM52q60ohUYUK",
+      "authorship_tag": "ABX9TyM9k0vlR/uyWecDsVLKHx6o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -637,24 +637,25 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "fec863cf-eb65-43c3-82b1-217d01126271"
+        "outputId": "64826790-cd91-4189-8765-5f9d0333b34d"
       },
       "source": [
-        "# hrnetv2 最牛逼的模型的测试，TEST.xxxxx这是yaml的格式，自己查yaml中的参数设置，可以改参数\n",
+        "# hrnetv2 最牛逼的模型，第一。TEST.xxxxx这是yaml的格式，自己查yaml中的参数设置，可以改参数。\n",
+        "# 注意，由于输入文件夹用到递归的写法，所以目录写法必须以目录标准写法来，在和这个写法下，无论你标注不标注具体文件，都是整个目录转换。\n",
         "!python3 -u test.py \\\n",
-        "  --imgs images/ADE_val_00001519.jpg \\\n",
+        "  --imgs ./images \\\n",
         "  --cfg config/ade20k-hrnetv2.yaml \\\n",
         "  DIR ade20k-hrnetv2-c1 \\\n",
         "  TEST.result results/ \\\n",
         "  TEST.checkpoint epoch_30.pth"
       ],
-      "execution_count": 14,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[2020-04-28 07:39:21,326 INFO test.py line 172 4023] Loaded configuration file config/ade20k-hrnetv2.yaml\n",
-            "[2020-04-28 07:39:21,326 INFO test.py line 173 4023] Running with config:\n",
+            "[2020-04-28 08:36:10,251 INFO test.py line 174 5071] Loaded configuration file config/ade20k-hrnetv2.yaml\n",
+            "[2020-04-28 08:36:10,251 INFO test.py line 175 5071] Running with config:\n",
             "DATASET:\n",
             "  imgMaxSize: 1000\n",
             "  imgSizes: (300, 375, 450, 525, 600)\n",
@@ -698,8 +699,8 @@
             "  visualize: False\n",
             "Loading weights for net_encoder\n",
             "Loading weights for net_decoder\n",
-            "# samples: 1\n",
-            "  0% 0/1 [00:00<?, ?it/s]Predictions in [images/ADE_val_00001519.jpg]:\n",
+            "# samples: 2\n",
+            "  0% 0/2 [00:00<?, ?it/s]Predictions in [./images/ADE_val_00001519.jpg]:\n",
             "  wall: 21.82%\n",
             "  ceiling: 12.46%\n",
             "  sofa: 10.88%\n",
@@ -721,7 +722,19 @@
             "  plate: 0.42%\n",
             "  book: 0.21%\n",
             "  light: 0.13%\n",
-            "100% 1/1 [00:01<00:00,  1.74s/it]\n",
+            " 50% 1/2 [00:01<00:01,  1.60s/it]Predictions in [./images/乔乔兔海报2.jpg]:\n",
+            "  wall: 28.41%\n",
+            "  signboard: 18.54%\n",
+            "  person: 15.08%\n",
+            "  table: 13.38%\n",
+            "  floor: 9.39%\n",
+            "  chair: 5.96%\n",
+            "  windowpane: 5.24%\n",
+            "  ceiling: 2.76%\n",
+            "  painting: 0.60%\n",
+            "  lamp: 0.36%\n",
+            "  bottle: 0.16%\n",
+            "100% 2/2 [00:02<00:00,  1.40s/it]\n",
             "Inference done!\n"
           ],
           "name": "stdout"
